--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,11 @@ dataclasses==0.8
 dominate==2.6.0
 Flask==2.0.2
 Flask-Bootstrap==3.3.7.1
+Flask-Migrate==3.1.0
 Flask-Moment==1.0.2
+Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+Flask-Mail==0.9.1
 importlib-metadata==4.8.1
 itsdangerous==2.0.1
 Jinja2==3.0.2
